added some color variables

--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -22,7 +22,7 @@ $bg-secondary: #f0f0f0;
 $bg-accent: #f4f4f4;
 
 /* LANDING PAGE HEX */
-$mandy: #e7585c;
+$mandy: #ee5b47;
 $tuna: #34343d;
 $hint-of-red: #fbfafa;
 $old-gold: #d4a449;
@@ -31,6 +31,12 @@ $fountain-blue: #5ea6bc;
 $santas-gray: #9b9ea6;
 $pancho: #efc8a8;
 $ghost: #caced4;
+$blue: #1da1f2;
+$t-blue: #120091;
+$black: black;
+$t-green: #043730;
+$green: #3c6761;
+$grey: #6c7078;
 
 //default variables
 $sm-gap: 1rem;
