--- a/client/src/styles/loading.scss
+++ b/client/src/styles/loading.scss
@@ -1,9 +1,10 @@
+@import "./variables";
+@import "./constants";
+
 .loading__container {
   height: 100vh;
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flexCenter;
 
   div.spinner {
     position: relative;
@@ -18,7 +19,7 @@
     div {
       width: 6%;
       height: 16%;
-      background: #e7585c;
+      background: $mandy;
       position: absolute;
       left: 49%;
       top: 43%;
