--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -22,7 +22,8 @@ $bg-secondary: #f0f0f0;
 $bg-accent: #f4f4f4;
 
 /* LANDING PAGE HEX */
-$mandy: #ee5b47;
+$mandy: #ea5945;
+$l-mandy: #f59284;
 $tuna: #34343d;
 $hint-of-red: #fbfafa;
 $old-gold: #d4a449;
