--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,48 +1,6 @@
-// Montserrat Font
-$montserrat: "Montserrat", sans-serif;
+$comfortaa: "Comfortaa", cursive;
+$rucco: "Russo One", sans-serif;
 
-// Open Sans Font
-$open-sans: "Open Sans", sans-serif;
-
-// Space Grotesk Font
-$space-grotesk: "Space Grotesk", sans-serif;
-
-// Main Colors
-$light-blue: #87cefa;
-$light-yellow: #fffacd;
-$soft-white: #f5f5f5;
-
-// Text Colors
-$text-color: #444444;
-$text-secondary: #777777;
-
-// Background Colors
-$bg-color: white;
-$bg-secondary: #f0f0f0;
-$bg-accent: #f4f4f4;
-
-/* LANDING PAGE HEX */
-$mandy: #ea5945;
-$l-mandy: #f59284;
-$tuna: #34343d;
-$hint-of-red: #fbfafa;
-$old-gold: #d4a449;
-$wewak: #f29c9e;
-$fountain-blue: #5ea6bc;
-$santas-gray: #9b9ea6;
-$pancho: #efc8a8;
-$ghost: #caced4;
-$blue: #1da1f2;
-$t-blue: #120091;
-$black: black;
-$t-green: #043730;
-$green: #3c6761;
-$grey: #6c7078;
-
-//default variables
-$sm-gap: 1rem;
-$xs-gap: 0.5rem;
-$l-gap: 5rem;
-$gap: 2rem;
-$md-gap: 2.6rem;
-$transition: 0.3s ease-in-out;
+$l-b: #222;
+$primary-color: white;
+$secondary-color: hsla(213, 86%, 60%, 1);
