--- a/client/src/styles/_constants.scss
+++ b/client/src/styles/_constants.scss
@@ -58,9 +58,6 @@
     color: $bg;
   }
 }
-
-@mixin shadow() {
-  box-shadow: 0px 68px 147px -22px rgba(0, 0, 0, 0.75);
-  -webkit-box-shadow: 0px 68px 147px -22px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 68px 147px -22px rgba(0, 0, 0, 0.75);
+@mixin boxshadow {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 50px;
 }
